# Goryaev-Ceramis

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
docker/: backend.sh
fastapi_backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
fastapi_backend/docker/: backend.sh
fastapi_backend/migrations/versions/: a22c81cc25db_.py
fastapi_backend/src/: config.py  main.py
fastapi_backend/tests/: auth_test.py  category_test.py  conftest.py  material_test.py
migrations/: env.py
migrations/versions/: 463c1b7e16ad_.py  4e377c16dea7_.py  5b3b0d588cdb_.py  8d36fef2c388_.py  8d6e36a3f37a_.py  ef12aa1b9ab2_.py
scr/: config.py  main.py
scr/administration/: router.py  shemas.py
scr/api_photos/: router.py  service.py
scr/auth/: hasher.py  router.py
scr/category/: router.py  service.py  shemas.py
scr/database/: engine.py  models.py
scr/items/: router.py  shemas.py
scr/materials/: router.py  service.py  shemas.py
scr/pages/: router.py
scr/products/: router.py  service.py  shemas.py
scr/templates/: home.html
scr/users/: router.py  service.py  shemas.py
src/: config.py  main.py
src/api_photos/: router.py
src/auth/: router.py  shemas.py
src/category/: router.py  service.py  shemas.py
src/database/: models.py
src/materials/: router.py  service.py
src/pages/: router.py
src/products/: router.py  service.py  shemas.py
src/reviews/: router.py  service.py  shemas.py
src/templates/: base.html  home.html
src/users/: router.py  service.py  shemas.py
tests/: category_test.py  material_test.py  users_test.py
(+22 files in other folders)
