[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"


[tool.poetry]
name = "goryaevceramis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
alembic = "^1.10.4"
psycopg2 = "^2.9.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
python-dotenv = "^1.0.0"
pydantic = "^1.10.8"
asyncpg = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiofiles = "^23.1.0"
pillow = "^9.5.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
